FD Labs Product Card 2018    fix for pricing being cut off in homepage carousels
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@80982 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/portraititem.css
+++ b/projects/Media/docroot/assets/css/common/portraititem.css
@@ -107,7 +107,7 @@
 }
 
 [data-feature-productcard="2018"] .portrait-item-price {
-  height: 27px;
+  height: 32px;
 }
 
 .portrait-item-price .free-price,
